workshop03/bggns-app-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bgg-appv1-deploy
spec:
  selector:
    matchLabels:
      name: bgg-appv1-po
  template:
    metadata:
      labels:
        name: bgg-appv1-po
    spec:
      containers:
      - name: bgg-appv1-container
        image: stackupiss/bgg-backend:v1
        args: ["--prefix", "/v1"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
          name: bgg-appv1-port
---
apiVersion: v1
kind: Service
metadata:
  name: bgg-appv1-svc
  labels:
    name: bgg-appv1-svc
spec:
  type: ClusterIP
  selector:
    name: bgg-appv1-po
  ports:
  - port: 80
    targetPort: bgg-appv1-port
