workshop03/bggns-app-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bgg-appv2-deploy
spec:
  selector:
    matchLabels:
      name: bgg-appv2-po
  template:
    metadata:
      labels:
        name: bgg-appv2-po
    spec:
      containers:
      - name: bgg-appv2-container
        image: stackupiss/bgg-backend:v2
        args: ["--prefix", "/v2"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
          name: bgg-appv2-port
---
apiVersion: v1
kind: Service
metadata:
  name: bgg-appv2-svc
  labels:
    name: bgg-appv2-svc
spec:
  type: ClusterIP
  selector:
    name: bgg-appv2-po
  ports:
  - port: 80
    targetPort: bgg-appv2-port
