workshop03/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgg-ing
  labels:
    name: bgg-ing
spec:
  ingressClassName: nginx
  rules:
   -  host: bgg.app.137.184.251.94.nip.io
      http:
        paths:
        - pathType: Prefix
          path: "/v1"
          backend:
            service:
              name: bgg-appv1-svc
              port: 
                number: 80
        - pathType: Prefix
          path: "/v2"
          backend:
            service:
              name: bgg-appv2-svc
              port: 
                number: 80
